@@ -1,3 +1,8 @@
+2012-04-09 belangeo <belangeo@gmail.com>
+
+    * Added new object : Count. Counts integers at audio rate.
+    - rev 919
+
 2012-04-06 belangeo <belangeo@gmail.com>
 
     * Added new object : OscListReceive. Handles list of floats from OSC as audio streams.
